# serializer version: 1
# name: test_AdaCode_SR_X2_model_g
  ImageModelDescriptor(
    architecture=AdaCodeArch(
      id='AdaCode',
      name='AdaCode',
    ),
    input_channels=3,
    model_bytes=239890464,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=0, multiple_of=32, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_AdaCode_SR_X4_model_g
  ImageModelDescriptor(
    architecture=AdaCodeArch(
      id='AdaCode',
      name='AdaCode',
    ),
    input_channels=3,
    model_bytes=229285408,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=0, multiple_of=16, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
